Add files from concept

--- a/composer.json
+++ b/composer.json
@@ -37,5 +37,8 @@
         "allow-plugins": {
             "phpstan/extension-installer": true
         }
+    },
+    "require": {
+        "php-di/php-di": "^7.0"
     }
 }
