--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "phoenix/repository",
+    "name": "phoenix/core",
     "description": "",
     "type": "library",
     "homepage": "https://github.com/phoenix/core",
