--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,10 @@
         },
         {
             "type": "vcs",
+            "url": "https://github.com/rooted-phoenix/rest.git"
+        },
+        {
+            "type": "vcs",
             "url": "https://github.com/rooted-phoenix/event.git"
         },
         {
@@ -69,6 +73,7 @@
         "phoenix/cache": "dev-main",
         "phoenix/di": "dev-main",
         "phoenix/db": "dev-main",
+        "phoenix/rest": "dev-main",
         "ext-json": "*"
     }
 }
