--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -5,12 +5,17 @@ on: [ push ]
 jobs:
   build-test:
     runs-on: ubuntu-latest
-
+    strategy:
+        matrix:
+            php: [ '7.4', '8.0', '8.1', '8.2' ]
     steps:
       - uses: actions/checkout@v3
-
+      - name: Set up SSH key
+        run: |
+            mkdir -p ~/.ssh
+            echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+            chmod 600 ~/.ssh/id_rsa
       - uses: php-actions/composer@v6
-
       - name: PHPUnit Tests
         uses: php-actions/phpunit@v3
         with:
