--- a/composer.json
+++ b/composer.json
@@ -11,43 +11,43 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "https://github.com/rooted-phoenix/tests.git"
+            "url": "git@github.com:rooted-phoenix/tests.git"
         },
         {
             "type": "vcs",
-            "url": "https://github.com/rooted-phoenix/di.git"
+            "url": "git@github.com:rooted-phoenix/di.git"
         },
         {
             "type": "vcs",
-            "url": "https://github.com/rooted-phoenix/cache.git"
+            "url": "git@github.com:rooted-phoenix/cache.git"
         },
         {
             "type": "vcs",
-            "url": "https://github.com/rooted-phoenix/db.git"
+            "url": "git@github.com:rooted-phoenix/db.git"
         },
         {
             "type": "vcs",
-            "url": "https://github.com/rooted-phoenix/loader.git"
+            "url": "git@github.com:rooted-phoenix/loader.git"
         },
         {
             "type": "vcs",
-            "url": "https://github.com/rooted-phoenix/rest.git"
+            "url": "git@github.com:rooted-phoenix/rest.git"
         },
         {
             "type": "vcs",
-            "url": "https://github.com/rooted-phoenix/event.git"
+            "url": "git@github.com:rooted-phoenix/event.git"
         },
         {
             "type": "vcs",
-            "url": "https://github.com/rooted-phoenix/facade.git"
+            "url": "git@github.com:rooted-phoenix/facade.git"
         },
         {
             "type": "vcs",
-            "url": "https://github.com/rooted-phoenix/singleton.git"
+            "url": "git@github.com:rooted-phoenix/singleton.git"
         },
         {
             "type": "vcs",
-            "url": "https://github.com/rooted-phoenix/utils.git"
+            "url": "git@github.com:rooted-phoenix/utils.git"
         }
     ],
     "autoload": {
