--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -18,6 +18,8 @@ jobs:
         run: |
             eval $(ssh-agent -s)
             ssh-add ~/.ssh/id_rsa
+      - name: Clear composer cache
+        run: composer clear-cache
       - uses: php-actions/composer@v6
       - name: PHPStan Static Analysis
         uses: php-actions/phpstan@v3
