--- a/composer.json
+++ b/composer.json
@@ -8,52 +8,6 @@
     "scripts": {
         "php-cs-fixer": "php-cs-fixer fix"
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/tests.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/di.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/cache.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/db.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/loader.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/rest.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/event.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/facade.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/singleton.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/utils.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:phpnomad/logger.git"
-        }
-    ],
     "autoload": {
         "psr-4": {
             "PHPNomad\\Core\\": "lib/"
@@ -79,15 +33,15 @@
         }
     },
     "require": {
-        "phpnomad/utils": "dev-main",
-        "phpnomad/event": "dev-main",
-        "phpnomad/cache": "dev-main",
-        "phpnomad/di": "dev-main",
-        "phpnomad/rest": "dev-main",
-        "phpnomad/singleton": "dev-main",
-        "phpnomad/facade": "dev-main",
-        "phpnomad/loader": "dev-main",
-        "phpnomad/logger": "dev-main",
+        "phpnomad/utils": "^1.0",
+        "phpnomad/event": "^1.0",
+        "phpnomad/cache": "^1.0",
+        "phpnomad/di": "^1.0",
+        "phpnomad/rest": "^1.0",
+        "phpnomad/singleton": "^1.0",
+        "phpnomad/facade": "^1.0",
+        "phpnomad/loader": "^1.0",
+        "phpnomad/logger": "^1.0",
         "ext-json": "*"
     }
 }
