--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "phpnomad/core",
     "description": "",
     "type": "library",
+    "version": "2.0.0",
     "homepage": "https://github.com/phpnomad/core",
     "readme": "README.md",
     "license": "MIT",
